fixed scrollbar problem

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,8 +3,7 @@
   border-bottom: 1px solid map-get($colors, "headerBorder");
 
   &__container {
-    // width: 480px;
-    width: 100vw;
+    width: calc(100vw - 23px);
     margin-left: 0;
     margin-right: 0;
     display: flex;
